# ebpfjit

./: .dockerignore  .gitignore  Dockerfile  Pipfile  bpf.py  compile.py  disasm.py  fly.toml  linker.py  llvmutils.py  loader.c  pyproject.toml  regen-graphs.sh  table.py
4gb/: script.ld  shim.c
benchmarks/: .benchmark.py.swp  Pipfile  benchmark.py  ip.py  run.py  runner.py
hello-rust/: Cargo.toml  build.sh  ctlz.c
hello-rust/src/: lib.rs  main.rs  prelude.rs
misc/gvisor-netstack/: go.mod  go.sum  main.go
modules/: Cargo.toml
modules/netstack/: Cargo.toml
modules/rustbpf/: Cargo.toml
netstack/: Cargo.toml  build.rs
netstack/src/: access.rs  main.rs  netstack.rs
results-amd-ewr/: cpuinfo.txt  meminfo.txt  uname.txt
results-amd-native/: meminfo
results-intel-mad/: meminfo.txt  uname.txt
results-jnb/: cpuinfo  meminfo  version
results-local-new/: relative.csv  results-2500-1000-line.eps  results-2500-1000.csv  results-2500-1000.eps
results-local-old/: output.pdf_original
results-mad/: cpuinfo  meminfo
results-perf/: perf-224.map
runner/: Cargo.toml  build.rs
rust-shim/: Cargo.toml  build.sh
rustbpf/: Cargo.toml
rustbpf/scripts/: build.sh  docker-build.sh  docker-run.sh  patch-rustlib.sh  vendor-smoltcp.sh
rustbpf/src/: lib.rs  prelude.rs
samples/: .gitignore  Makefile  add.c  hello-rodata.c  hello.c
scripts/: docker-run.sh  fly-run.sh
tests/: .gitignore  Makefile  add.c  fib-rec.c  fib.c  harness.c  hello-data.c  hello-extern.c  hello-extern2.c  hello-funcptr.c  hello-rodata.c  hello.c  printf.c  ret-if.c  shim.c
(+2902 files in other folders)
