[package]
name = "rustbpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = { version = "1.8.0", default-features = false }

[dependencies.smoltcp]
path = "vendor/smoltcp"
default-features = false
features = ["alloc", "proto-ipv4", "medium-ethernet", "socket-tcp"]
